<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_signup">注册</string>
    <string name="title_activity_land">我的土地</string>
    <string name="title_add_land">发布土地</string>
    <string name="title_change_land">土地详情修改</string>
    <string name="title_change_good">产品详情修改</string>
    <string name="title_order">订单详情</string>
    <string name="title_good">产品详情</string>
    <string name="title_activity_user2_main">租地</string>
    <string name="title_plan">种植方案修改</string>
    <string name="title_address_change">地址修改</string>
    <string name="title_add_logistics">添加物流信息</string>
    <string name="title_wayList">待发货订单</string>
    <string name="title_payList">待支付订单</string>
    <string name="title_allList">全部订单</string>
    <string name="title_overList">待收货订单</string>
    <string name="title_my">我的地址信息</string>
    <string name="title_search">搜索</string>
    <string name="title_setting">修改个人信息</string>
    <string name="title_check">审核土地</string>
    <string name="title_report">处理举报信息</string>
    <string name="title_select">选择地址信息</string>
    <string name="title_create">创建订单</string>
    <string name="title_lease">未支付租用订单</string>
    <string name="title_self">运输给自己订单</string>
    <string name="prompt_name">请输入用户名</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_password_again">请再次输入密码</string>
    <string name="prompt_land_title">在这里输入土地名称</string>
    <string name="prompt_land_detail">在这里详细描述一下土地具体情况</string>
    <string name="prompt_goods_title">在这里输入商品名称</string>
    <string name="prompt_goods_detail">在这里详细描述一下商品具体情况</string>
    <string name="prompt_land_price">请输入土地价格</string>
    <string name="prompt_goods_price">请输入商品价格</string>
    <string name="prompt_goods_num">请选择农产品重量</string>
    <string name="prompt_land_area">请输入土地面积</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_verification">获取验证码</string>
    <string name="action_user">请选择用户身份</string>
    <string name="action_change">修改</string>
    <string name="action_change_pic">修改图片</string>
    <string name="action_delete">删除</string>
    <string name="action_detail">查看详情</string>
    <string name="action_pay">结算</string>
    <string name="action_add_cart">加入购物车</string>
    <string name="action_pay_now">立即购买</string>
    <string name="action_check">审核</string>
    <string name="action_report">处理举报信息</string>
    <string name="action_admin">管理员登录</string>
    <string name="user1">农场主</string>
    <string name="user2">租用土地会员</string>
    <string name="user3">农产品买家</string>
    <string name="goto_sign_up">立即注册</string>
    <string name="goto_change">确定修改</string>
    <string name="goto_delete">删除商品</string>
    <string name="goto_add">确定发布</string>
    <string name="goto_create">确定下单</string>
    <string name="goto_add_address">确定添加地址</string>
    <string name="goto_plan">确定更改种植方案</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">该手机号没有注册</string>
    <string name="invalid_password">密码必须大于5个字符</string>
    <string name="login_failed">"登录失败"</string>
    <string name="land_img">土地图片</string>
    <string name="price">价格：</string>
    <string name="area">面积：</string>
    <string name="num">重量：</string>
    <string name="detail">简介：</string>
    <string name="plant">可种植作物</string>
    <string name="plant_data">作物种植情况</string>
    <string name="data">实时数据</string>
    <string name="sort">分类：</string>
    <string name="water">湿度</string>
    <string name="warm">温度</string>
    <string name="CO2">二氧化碳</string>
    <string name="light">光照：</string>
    <string name="fertilizer">施肥</string>
    <string name="pest">虫害防治</string>
    <string name="ill">病害防治：</string>
    <string name="add_tab_text_1">发布</string>
    <string name="add_tab_text_2">详情</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="land_title">土地名称</string>
    <string name="land_detail">土地详情</string>
    <string name="goods_title">商品名称</string>
    <string name="goods_detail">商品详情</string>
    <string name="phone">&#xe603;</string>
    <string name="password">&#xe612;</string>
    <string name="add">&#xe600;</string>
    <string name="back">&#xe671;</string>
    <string name="home1">&#xe67f;</string>
    <string name="land1">&#xe72c;</string>
    <string name="home2">&#xe62a;</string>
    <string name="land2">&#xe969;</string>
    <string name="photo">&#xe604;</string>
    <string name="list1">&#xe62e;</string>
    <string name="list2">&#xe61a;</string>
    <string name="goods1">&#xe630;</string>
    <string name="goods2">&#xe634;</string>
    <string name="my1">&#xe681;</string>
    <string name="my2">&#xe67b;</string>
    <string name="cart1">&#xe601;</string>
    <string name="cart2">&#xe602;</string>
    <string name="setting">&#xe675;</string>
    <string name="search">&#xe608;</string>
    <string name="in">&#xe61b;</string>
    <string name="all">&#xe61a;</string>
    <string name="pay">&#xe60d;</string>
    <string name="way">&#xe6c1;</string>
    <string name="over">&#xe634;</string>
    <string name="delete">&#xe605;</string>
    <string name="report1">&#xe6af;</string>
    <string name="report2">&#xe711;</string>
    <string name="logoff">&#xe609;</string>
</resources>
