<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card"
    android:padding="15dp"
    android:layout_marginBottom="15dp">
    <ImageView
        android:id="@+id/Land_Pic"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/land_img"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/Land_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="@id/Land_Pic"
        android:textSize="18sp"
        android:textIsSelectable="true"/>

    <LinearLayout
        android:id="@+id/Land_Price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/Land_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:textIsSelectable="true"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/detail"
            android:background="@drawable/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginEnd="12dp"
            android:layout_gravity="right"
            android:text="@string/action_detail"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>


</LinearLayout>